# bighub

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: publish-mcp-registry.yml
adapters/js/openai/: README.md
adapters/python/anthropic/: README.md
adapters/python/openai/: CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
adapters/python/openai/src/bighub_openai/: __init__.py  guard.py
adapters/python/openai/tests/: test_guard.py
examples/js/: README.md
examples/python/: README.md
sdk/python/: .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
sdk/python/src/bighub/: __init__.py  async_client.py  auth.py  exceptions.py  models.py  protocols.py  sync_client.py  transport.py  types.py  webhooks.py
sdk/python/src/bighub/resources/: __init__.py  actions.py  api_keys.py  approvals.py  auth.py  calibration.py  cases.py  events.py  features.py  ingest.py  insights.py  kill_switch.py  learning.py  outcomes.py  precedents.py  retrieval.py  rules.py  simulations.py  webhooks.py
sdk/python/tests/: test_async_client.py  test_sync_client.py
servers/mcp/: README.md  package-lock.json  package.json  server.json  tsconfig.json
servers/mcp/src/: httpClient.ts  index.ts  registerTools.ts
servers/mcp/tests/: httpClient.test.ts  registerTools.test.ts
