[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "bighub"
version = "0.2.6"
description = "Official Python SDK for governing AI agent execution with the BIGHUB intelligence and control layer."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "BIGHUB_CEO" }
]
keywords = ["bighub", "ai-agents", "governance", "execution-control", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]

[project.urls]
Homepage = "https://bighub.io"
PyPI = "https://pypi.org/project/bighub/"
OpenAIAdapter = "https://pypi.org/project/bighub-openai/"

[tool.hatch.build.targets.wheel]
packages = ["src/bighub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
