[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "bighub-openai"
version = "0.2.5"
description = "OpenAI adapter for governing tool execution with BIGHUB."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "BIGHUB_CEO" }
]
keywords = ["bighub", "openai", "ai-agents", "governance", "tool-calling"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "bighub>=0.2.6,<0.3.0",
  "openai>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.urls]
Homepage = "https://bighub.io"
PyPI = "https://pypi.org/project/bighub-openai/"
CoreSDK = "https://pypi.org/project/bighub/"

[tool.hatch.build.targets.wheel]
packages = ["src/bighub_openai"]

[tool.pytest.ini_options]
testpaths = ["tests"]

