[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "bighub-openai"
version = "3.1.0"
description = "OpenAI adapter for decision learning for AI agent actions with BIGHUB."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "BIGHUB_CEO" }
]
keywords = ["bighub", "openai", "ai-agents", "decision-learning", "tool-calling"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "bighub>=3.1.0,<4.0.0",
  "openai>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.urls]
Homepage = "https://bighub.io"
GitHub = "https://github.com/bighub-io/bighub"
MCPServer = "https://www.npmjs.com/package/@bighub/bighub-mcp"
PyPI = "https://pypi.org/project/bighub-openai/"
CoreSDK = "https://pypi.org/project/bighub/"

[tool.hatch.build.targets.wheel]
packages = ["src/bighub_openai"]

[tool.pytest.ini_options]
testpaths = ["tests"]

